--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+helix (22.12-3) jammy; urgency=medium
+
+  * Fix build process by adding vendor.tar.xz
+
+ -- Fabian Mettler <fabian@mettler.cc>  Wed, 04 Jan 2022 00:00:00 +0000
+
+helix (22.12-2) jammy; urgency=medium
+
+  * Fix build process
+
+ -- Fabian Mettler <fabian@mettler.cc>  Wed, 04 Jan 2022 00:00:00 +0000
+
 helix (22.12-1) jammy; urgency=medium
 
   * New upstream release
