--- a/debian/changelog
+++ b/debian/changelog
@@ -1,16 +1,16 @@
-helix (22.12-3) jammy; urgency=medium
+helix (22.12-3) unstable; urgency=medium
 
   * Fix build process by adding vendor.tar.xz
 
  -- Fabian Mettler <fabian@mettler.cc>  Wed, 04 Jan 2022 00:00:00 +0000
 
-helix (22.12-2) jammy; urgency=medium
+helix (22.12-2) unstable; urgency=medium
 
   * Fix build process
 
  -- Fabian Mettler <fabian@mettler.cc>  Wed, 04 Jan 2022 00:00:00 +0000
 
-helix (22.12-1) jammy; urgency=medium
+helix (22.12-1) unstable; urgency=medium
 
   * New upstream release
 
