--- a/debian/changelog
+++ b/debian/changelog
@@ -1,29 +1,47 @@
+helix (23.03-3) unstable; urgency=medium
+
+  * Fix build process for grammars
+
+ -- Fabian Mettler <fabian@mettler.cc>  Fri, 31 Mar 2023 22:00:04 +0100
+
+helix (23.03-2) unstable; urgency=medium
+
+  * Fix build process by adding new cargo.config for 23.03
+
+ -- Fabian Mettler <fabian@mettler.cc>  Fri, 31 Mar 2023 21:15:10 +0100
+
+helix (23.03-1) unstable; urgency=medium
+
+  * New upstream release
+
+ -- Fabian Mettler <fabian@mettler.cc>  Fri, 31 Mar 2023 20:22:03 +0100
+
 helix (22.12-5) unstable; urgency=medium
 
-- Changed architecture to any in control
+  * Changed architecture to any in control
 
--- Fabian Mettler <fabian@mettler.cc> Mon, 27 Feb 2023 20:14:36 +0100
+ -- Fabian Mettler <fabian@mettler.cc> Mon, 27 Feb 2023 20:14:36 +0100
 
 helix (22.12-4) unstable; urgency=medium
 
-- Changed build process to always build grammars
+  * Changed build process to always build grammars
 
--- Fabian Mettler <fabian@mettler.cc> Sun, 15 Jan 2023 17:27:27 +0100
+ -- Fabian Mettler <fabian@mettler.cc> Sun, 15 Jan 2023 17:27:27 +0100
 
 helix (22.12-3) unstable; urgency=medium
 
-- Fix build process by adding vendor.tar.xz
+  * Fix build process by adding vendor.tar.xz
 
--- Fabian Mettler <fabian@mettler.cc> Wed, 04 Jan 2023 00:00:00 +0000
+ -- Fabian Mettler <fabian@mettler.cc> Wed, 04 Jan 2023 00:00:00 +0000
 
 helix (22.12-2) unstable; urgency=medium
 
-- Fix build process
+  * Fix build process
 
--- Fabian Mettler <fabian@mettler.cc> Wed, 04 Jan 2023 00:00:00 +0000
+ -- Fabian Mettler <fabian@mettler.cc> Wed, 04 Jan 2023 00:00:00 +0000
 
 helix (22.12-1) unstable; urgency=medium
 
-- New upstream release
+  * New upstream release
 
--- Fabian Mettler <fabian@mettler.cc> Sat, 31 Dec 2022 00:00:00 +0000
+ -- Fabian Mettler <fabian@mettler.cc> Sat, 31 Dec 2022 00:00:00 +0000
