--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,39 @@
+helix (23.05-8) unstable; urgency=medium
+
+  * Remove grammar sources after build
+
+ -- Fabian Mettler <fabian@mettler.cc>  Mon, 12 Jun 2023 17:32:00 +0100
+
+helix (23.05-7) unstable; urgency=medium
+
+  * Add missing build dependencies
+
+ -- Fabian Mettler <fabian@mettler.cc>  Mon, 12 Jun 2023 17:15:00 +0100
+
+helix (23.05-6) unstable; urgency=medium
+
+  * Try to fix build process for grammars
+
+ -- Fabian Mettler <fabian@mettler.cc>  Mon, 12 Jun 2023 09:55:00 +0100
+
+helix (23.05-5) unstable; urgency=medium
+
+  * Try to fix build process for grammars
+
+ -- Fabian Mettler <fabian@mettler.cc>  Sun, 11 Jun 2023 15:58:00 +0100
+
+helix (23.05-4) unstable; urgency=medium
+
+  * Try to fix build process for grammars
+
+ -- Fabian Mettler <fabian@mettler.cc>  Sun, 11 Jun 2023 15:48:00 +0100
+
+helix (23.05-3) unstable; urgency=medium
+
+  * New upstream release
+
+ -- Fabian Mettler <fabian@mettler.cc>  Sun, 11 Jun 2023 15:29:00 +0100
+
 helix (23.03-3) unstable; urgency=medium
 
   * Fix build process for grammars
